Fix transcode download links on mobile
Bug: T103129

--- a/resources/transcodeTable.css
+++ b/resources/transcodeTable.css
@@ -8,3 +8,7 @@
 .mw-filepage-transcodestatus .download-btn:hover {
 	background-position: 0 0;
 }
+.mw-filepage-transcodestatus .download-btn span {
+	/* Text hidden by the above image */
+	display: none;
+}
